tests/NormalTests/paczka2/big_fuzzy/21864859.err
Error in line 3: SKz99lOUr A898 100,0
Error in line 5: sTCyC4Kgb A123 94,5
Error in line 18: QQJP A898 86,2
Error in line 31: QQJP A123 0,1
Error in line 28: sTCyC4Kgb A123 7,1
Error in line 40: F7bK A292 -1,7
Error in line 39: sTCyC4Kgb A898 84,6
Error in line 37: F7bK A292 5,3
Error in line 48: A992 A292 340,4
Error in line 52: SKz99lOUr A292 71,3
Error in line 65: MML A292 80,1
Error in line 69: QQJP A992 1,7
Error in line 70: QQJP A898 15,5
Error in line 75: QQJP A123 359,5
Error in line 77: QQJP A898 23,0
Error in line 85: A992 A898 -5,4
Error in line 99: SKz99lOUr A292 58,6
Error in line 103: sTCyC4Kgb A898 78,1
Error in line 127: F7bK A123 43,1
Error in line 137: MML A292 23,0
Error in line 140: MML A898 49,3
Error in line 141: sTCyC4Kgb A292 76,5
Error in line 154: A992 A292 147,7
Error in line 152: sTCyC4Kgb A898 125,7
Error in line 160: SKz99lOUr A992 81,9
Error in line 166: 121BG6 A123 71,7
Error in line 161: QQJP A292 64,8
Error in line 172: QQJP A992 38,2
Error in line 177: 121BG6 A292 329,9
Error in line 174: QQJP A123 9,7
Error in line 194: F7bK A898 33,6
Error in line 192: QQJP A992 49,2
Error in line 186: MML A898 85,7
Error in line 201: QQJP A292 -2,0
Error in line 182: SKz99lOUr A123 0,7
Error in line 206: A992 A992 67,6
Error in line 215: A992 A898 28,2
Error in line 217: SKz99lOUr A292 57,6
Error in line 224: F7bK A292 90,8
Error in line 226: F7bK A123 7,2
Error in line 198: QQJP A292 50,0
Error in line 218: 121BG6 A898 4,7
Error in line 230: 121BG6 A123 45,1
Error in line 238: sTCyC4Kgb A123 75,8
Error in line 233: SKz99lOUr A992 66,2
